Escopo e chave de configuração do serviço

--- a/bitcoin/src/main/resources/application.properties
+++ b/bitcoin/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-io.github.mateusalxd.service.BitcoinService/mp-rest/url=https://alura-bitcoin.herokuapp.com
+bitcoin-api/mp-rest/url=https://alura-bitcoin.herokuapp.com
+bitcoin-api/mp-rest/scope=javax.enterprise.context.RequestScoped
