--- a/bitcoin/pom.xml
+++ b/bitcoin/pom.xml
@@ -63,7 +63,11 @@
     <dependency>
     	<groupId>io.quarkus</groupId>
     	<artifactId>quarkus-hibernate-orm-panache</artifactId>
-    </dependency>    
+    </dependency>
+    <dependency>
+    	<groupId>io.quarkus</groupId>
+    	<artifactId>quarkus-security-jpa</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
